--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,19 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    color: pink;
+    color: #333;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+.container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDDD;
+    margin: 0 auto;
+}
+
+.post{
+    font-size: 20px;
 }
